--- a/spring-webmvc/spring-webmvc.gradle
+++ b/spring-webmvc/spring-webmvc.gradle
@@ -20,7 +20,6 @@ dependencies {
 	optional("jakarta.el:jakarta.el-api")
 	optional("jakarta.xml.bind:jakarta.xml.bind-api")
 	optional('io.micrometer:context-propagation')
-	optional("org.webjars:webjars-locator-core")
 	optional("com.rometools:rome")
 	optional("com.github.librepdf:openpdf")
 	optional("org.apache.poi:poi-ooxml")
@@ -70,6 +69,7 @@ dependencies {
 	testRuntimeOnly("org.jruby:jruby")
 	testRuntimeOnly("org.python:jython-standalone")
 	testRuntimeOnly("org.webjars:underscorejs")
+	testRuntimeOnly("org.webjars.npm:htmx.org")
 	testRuntimeOnly("org.glassfish:jakarta.el")
 	testRuntimeOnly("com.sun.xml.bind:jaxb-core")
 	testRuntimeOnly("com.sun.xml.bind:jaxb-impl")
